adjust height for alignement issue

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -334,7 +334,7 @@ sup {
 			background-color: transparent!important;
 		}
 		.grid-article-card-image.mod-action{
-			padding-top: 16%;
+			padding-top: 14%;
 		  padding-bottom: 34%;
 		  padding-left: 16px;
 		  padding-right: 16px;
